--- a/greenwave/src/app/login/LoginPage.module.css
+++ b/greenwave/src/app/login/LoginPage.module.css
@@ -73,3 +73,11 @@
 .providerButton:hover {
   background-color: #3c78d8;
 }
+
+/* Estilo para el mensaje de error */
+.errorText {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 10px;
+  font-weight: bold; /* Agrega negrita al mensaje de error */
+}
