--- a/greenwave/src/app/homepage/home.css
+++ b/greenwave/src/app/homepage/home.css
@@ -1,53 +1,96 @@
-.heroSection{
-    height: calc(100vh - 86.13px);
+.heroSection {
+  height: calc(100vh - 86.13px);
 }
 
 .card {
-    position: relative;
-    width: 400px;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: 5px;
+  position: relative;
+  width: 400px;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: 5px;
+}
+
+.cardImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.cardBody {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 2s;
+  color: aliceblue;
+}
+
+.card:hover .cardBody {
+  left: 0;
+}
+
+.cardTitle {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.cardInfo {
+  font-size: 1rem;
+  line-height: 25px;
+}
+
+@media (max-width: 1000px) {
+  .responsive {
+    display: block;
   }
-  
-  .cardImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    cursor: pointer;
+
+  .responsive h1{
+    margin: 20px;
   }
-  
-  .cardBody {
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
-    backdrop-filter: blur(5px);
-    border-radius: 15px;
-    padding: 30px;
-    display: flex;
+
+  .responsive p{
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .responsive > article {
     flex-direction: column;
-    justify-content: center;
-    transition: 2s;
-    color: aliceblue;
+    width: auto !important; 
+    height: auto !important; 
+    border-radius: initial !important; 
   }
 
-  .card:hover .cardBody{
-    left: 0;
-  }
+  .responsive img{
+    width: 100% !important;
+    height: 630px !important;
+    transition: none !important;
+}
 
-  .cardTitle{
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    font-weight: 500;
-  }
+.responsive img:hover{
+  transition: none ;
+    transform: none;
+}
+}
 
-  .cardInfo{
-    font-size: 1rem;
-    line-height: 25px;
-  }
-  
+@media (max-width:600px){
+  .responsive img{
+    height: 400px !important ;
+}
+
+.responsive img:hover{
+  transition: none ;
+    transform: none;
+}
+}
