--- a/greenwave/src/app/login/LoginPage.module.css
+++ b/greenwave/src/app/login/LoginPage.module.css
@@ -1,6 +1,17 @@
+@font-face {
+  font-family: 'leters';
+  src: url('../../../public/fonts/Hangedletters.ttf');
+}
 .container {
-  border-radius: 1rem 1rem;
-  background: linear-gradient(to right top, #527e7b, #4a7771, #426f66, #3b685c, #356051);
+  width:100%;
+  position:relative;
+  background-image: url(https://th.bing.com/th/id/OIG.x9f1P6ph4HoQdqzI0.Ph?w=1024&h=1024&rs=1&pid=ImgDetMain);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: fixed;
+  /* z-index: -1; */
+  background-color: aqua;
+  /* background: linear-gradient(to right top, #527e7b, #4a7771, #426f66, #3b685c, #356051); */
 }
 
 .title {
@@ -91,4 +102,20 @@
   font-size: 14px;
   margin-bottom: 10px;
   font-weight: bold; /* Agrega negrita al mensaje de error */
+}
+.log{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-image: url('../../../public/images/planta.png');
+  background-size:90%;
+  height: 100%;
+
+}
+.log h1{
+  font-family: 'leters';
+  font-size: 30px;
+  color:white;
+  padding-bottom: 30px;
 }
