estilos en login page

--- a/greenwave/src/app/login/LoginPage.module.css
+++ b/greenwave/src/app/login/LoginPage.module.css
@@ -5,7 +5,7 @@
 .container {
   width:100%;
   position:relative;
-  background-image: url(https://www.manosverdes.co/wp-content/uploads/2020/09/huella-ecologica-imagen-destacada.jpg);
+  background-image: url(https://wallpapers.com/images/hd/sage-green-laptop-wallpaper-cqs221t6dcy8rb52.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: fixed;
