--- a/greenwave/src/app/components/dashboard/products/products.module.css
+++ b/greenwave/src/app/components/dashboard/products/products.module.css
@@ -100,3 +100,11 @@
   opacity: 0.5;
   cursor: not-allowed;
 }
+
+.table td {
+  font-size: 16px;
+}
+
+.table .productColumn {
+  font-size: 20px; 
+}
